--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ One of the most important applications of data science in the commercial sector 
           <div class="col-lg-12">
 
             <p>
-             1). What features are significant in prediction the churn in a customer. 
+             1). What features are significant in prediticting the churn in the customers. 
             </p>
             
 <!--             <a href="#" class="btn-learn-more">Learn More</a> -->
